<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
    android:id="@+id/imageViewBackGround"
...
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/log_background_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/buttonBoxScore" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
...
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/buttonAssist"
        style="@style/iconInnerGreen"
        app:layout_constraintEnd_toEndOf="@+id/buttonTurnOver"
        app:layout_constraintTop_toTopOf="@+id/buttonOffensiveRebound"
        app:srcCompat="@drawable/icon_assist_min2" />

    <ImageView
        android:id="@+id/buttonTurnOver"
        style="@style/iconInnerGreen"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlock"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/buttonBlock"
        app:srcCompat="@drawable/icon_slipped_min2" />


    <ImageView
        android:id="@+id/buttonOffensiveRebound"
        style="@style/iconInnerGreen"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonBlock"
        app:layout_constraintTop_toTopOf="@+id/buttonDefensiveRebound"
        app:srcCompat="@drawable/icon_rebound3_min2" />

    <TextView
        android:id="@+id/textVieOffensiveRebound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textColor="#fff9bf"
        app:layout_constraintBottom_toBottomOf="@+id/buttonOffensiveRebound"
        app:layout_constraintEnd_toEndOf="@+id/buttonOffensiveRebound" />


    <ImageView
        android:id="@+id/buttonTutorial"
        style="@style/iconInnerSelectedBlue"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonFreeThrow"
        app:layout_constraintTop_toTopOf="@+id/buttonBoxScore"
        app:srcCompat="@drawable/question_mark_icon_min" />

    <ImageView
        android:id="@+id/buttonSteal"
        style="@style/iconInnerGreen"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDefensiveRebound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBlock"
...

    <ImageView
        android:id="@+id/buttonDefensiveRebound"
        style="@style/iconInnerGreen"
        android:padding="13dp"

        app:layout_constraintBottom_toTopOf="@+id/button2Pts"
        app:layout_constraintEnd_toEndOf="@+id/buttonSteal"
        app:layout_constraintTop_toBottomOf="@+id/buttonSteal"
        app:srcCompat="@drawable/icon_rebound3_min2" />

    <TextView
        android:id="@+id/textVieDefensiveRebound"
...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />


    <ImageView
        android:id="@+id/button3Pts"
        style="@style/iconInner"

        app:layout_constraintEnd_toEndOf="@+id/buttonOffensiveRebound"
        app:layout_constraintTop_toTopOf="@+id/button2Pts"
        app:srcCompat="@drawable/icon_shoot_min2" />

...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_onCourt_players"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
...
    <!--app:srcCompat="@drawable/icon_last_step_min"-->
    <!--tools:layout_editor_absoluteX="648dp"-->
    <!--tools:layout_editor_absoluteY="353dp" />-->


    <ImageView
        android:id="@+id/buttonExit"
        style="@style/iconInnerSelectedBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2Pts"
        app:srcCompat="@drawable/icon_finish_min2" />

    <ImageView
...
        app:layout_constraintEnd_toEndOf="@+id/button3Pts"
        app:layout_constraintTop_toTopOf="@+id/buttonExit"
        app:srcCompat="@drawable/icon_box_score_min2" />


    <ImageView
        android:id="@+id/buttonSub"
        style="@style/iconInner"
        app:layout_constraintEnd_toStartOf="@+id/buttonFoul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/buttonFreeThrow"
        app:layout_constraintTop_toTopOf="@+id/buttonFoul"
        app:srcCompat="@drawable/player_change" />

...
