<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutNewGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#000000">

    <ImageView
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adjusted_background_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playerRecyclerView"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintCircleRadius="40dp"
        android:background="@drawable/log_border"
...
        <!--android:text="New Game"-->
        <!--android:textSize="20sp"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teamRecyclerView"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/log_border"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/editTextOpponent"
        style="@style/WhiteText"
        android:layout_width="0dp"
        android:maxLength="12"
        android:imeOptions="flagNoExtractUi"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
...
        android:text="Tournament"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editTextOpponent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOpponent" />

    <EditText
        android:id="@+id/editTextTournamnet"
        style="@style/WhiteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:maxLength="12"
...
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewTournament"
        app:layout_constraintTop_toBottomOf="@+id/textViewTournament" />

    <ImageView
        android:id="@+id/imageViewNext"
        android:layout_width="50dp"

        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
