<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:id="@+id/imageView3"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<com.google.android.gms.common.SignInButton-->
    <!--android:id="@+id/sign_in_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginBottom="48dp"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
...
        android:textSize="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/log_border"
        android:drawableLeft="@drawable/google_login_button"
        android:paddingLeft="14dp"
        android:drawablePadding="2dp"
        android:text="Login"
        android:textColor="@color/selected_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.7" />
...
